--- a/hw1/report.html
+++ b/hw1/report.html
@@ -746,14 +746,16 @@ hue-6-2: #e6c07b
 <style>
             body {
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', system-ui, 'Ubuntu', 'Droid Sans', sans-serif;
-                font-size: 17px;
+                font-size: 16px;
                 line-height: 1.5;
             }
         </style>
         <style>
 .task-list-item { list-style-type: none; } .task-list-item-checkbox { margin-left: -20px; vertical-align: middle; }
 </style>
-        
+        <style>
+
+</style>
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="hw1">HW1</h1>
@@ -782,7 +784,7 @@ hue-6-2: #e6c07b
 </ul>
 <h3 id="different-fields">Different fields</h3>
 <ul>
-<li>Flags (only in TCP)</li>
+<li>Header Length (only in TCP)</li>
 <li>Sequence number (only in TCP)</li>
 <li>Acknowledgement number (only in TCP)</li>
 </ul>
